--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": ".eslintrc.js",
   "dependencies": {
+    "csvtojson": "^1.1.9",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "pg": "^7.4.1",
