--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": ".eslintrc.js",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "validator": "^9.4.1",
     "xss": "^0.3.7"
