--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": ".eslintrc.js",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
