--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-import": "^2.8.0"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "eslint": "eslint *.js **/*.js"
   },
   "keywords": [],
