--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/h1
 SESSION_SECRET=4098uijovj!aSEF$2$cjc1X
+CLOUDINARY_CLOUD = dgbmwdqbl
+CLOUDINARY_API_KEY = 248331327526678
+CLOUDINARY_API_SECRET = oZDnQPWpXGzERy_9ARJnn9BHO8c
