--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": ".eslintrc.js",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "cloudinary": "^1.11.0",
     "cookie-parser": "^1.4.3",
     "csvtojson": "^1.1.9",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
