--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "csvtojson": "^1.1.9",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.0",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.4.1",
     "validator": "^9.4.1",
     "xss": "^0.3.7"
